added non-add var section

--- a/Practice_Problems/Equation_sheet_1.tex
+++ b/Practice_Problems/Equation_sheet_1.tex
@@ -56,4 +56,19 @@ D_{AB} = p_{AB} - p_Ap_B \nonumber
 \label{eqn:F_relationships}
 \end{equation}
 
+\begin{equation}
+\fit =1-\frac{H_I}{H_T}.\nonumber
+%\label{eqn:F_relationships}
+\end{equation}
+
+\begin{equation}
+\fis =1-\frac{H_I}{H_S}.\nonumber
+%\label{eqn:F_relationships}
+\end{equation}
+
+\begin{equation}
+\fst =1-\frac{H_S}{H_T}.\nonumber
+%\label{eqn:F_relationships}
+\end{equation}
+
 \end{document}
