added breeders eqn figure

--- a/chapter-04.tex
+++ b/chapter-04.tex
@@ -275,7 +275,7 @@ close to one then the parental mid-point is a good guess at the child's
 phenotype.\\
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{figures/QT2.png}
+\includegraphics[width=\textwidth]{figures/QT2.pdf}
 \end{center}
 \caption{Regression of parental mid-point phenotype on child's
   phenotype. The three panels show decreasing levels of environmental
